# review-insights-mlops

./: .dockerignore  .env.example  .gitignore  Dockerfile  HUGGINGFACE_MIGRATION_FR.md  PROJECT_MLOPS_GUIDE_FR.md  README.md  api_app.py  app.py  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
artifacts/: TRAINING_PLACEHOLDER.md
deploy/huggingface_api_space/: .dockerignore  Dockerfile  README.md  SPACE_SETUP_FR.md
deploy/huggingface_frontend_space/: .dockerignore  Dockerfile  README.md  SPACE_SETUP_FR.md
deploy/huggingface_model_repo/: README.md
docs/: LIVRABLES_FINAUX_FR.md  SECURITE_EXPLOITATION_FR.md  SOUTENANCE_READY_FR.md
models/: manifest.json  sent_livraison.joblib  sent_produit.joblib  sent_sav.joblib  themes_clf.joblib  themes_thresholds.npy
pipelines/: evaluate_default.py  train_placeholder.py
reports/: default_evaluation.json  default_evaluation.md
scripts/: build_hf_frontend_space_bundle.ps1  build_hf_space_bundle.ps1
site/: app-online.html  app.css  app.js  demo-api.html  index.html  script.js  styles.css
src/review_insights/: __init__.py  api.py  app.py  config.py  dataset.py  engine.py  evaluation.py  model_backend.py  monitoring.py  reporting.py  schemas.py  service.py  settings.py
tests/: test_api.py  test_engine.py  test_model_backend.py  test_service.py
